Blender crashes upon moving extruded vertices/edges with edge snapping enabled #72071

Closed
opened 2019-11-30 19:52:35 +01:00 by Emilia · 8 comments

System Information
Operating system: Windows 10 (V.1903)
Graphics card: Asus ROG strix RTX 2070 (Driver Version: 441.41)
CPU: AMD Ryzen 5 1600X (6-core)
RAM: 16 GB

Blender Version
Broken: (v.2.81)
Worked: (v.2.80)

Short description of error
When trying to move my extruded vertex or edge with G and edge snapping on, Blender immediately closes. I was not able to recreate this in a simplified blend.file so I will just add my project file as it can be recreated there with every vertex and edge there. In addition to this, I had the mirror modifier enabled. Blender is installed through Steam.

Exact steps for others to reproduce the error

  1. Press E to extrude your desired vertex or edge
  2. Enable Snapping-> Egde Snapping
  3. Press G to move your vertex/edge
    Xenomorph.blend

Here is a recorded video evidence of the issue:
https://drive.google.com/file/d/1GVw7XJg9knSQl95_b4SskFiZzHpuc_cw/view?usp=sharing

**System Information** Operating system: Windows 10 (V.1903) Graphics card: Asus ROG strix RTX 2070 (Driver Version: 441.41) CPU: AMD Ryzen 5 1600X (6-core) RAM: 16 GB **Blender Version** Broken: (v.2.81) Worked: (v.2.80) **Short description of error** When trying to move my extruded vertex or edge with G and edge snapping on, Blender immediately closes. I was not able to recreate this in a simplified blend.file so I will just add my project file as it can be recreated there with every vertex and edge there. In addition to this, I had the mirror modifier enabled. Blender is installed through Steam. **Exact steps for others to reproduce the error** 1. Press E to extrude your desired vertex or edge 2. Enable Snapping-> Egde Snapping 3. Press G to move your vertex/edge [Xenomorph.blend](https://archive.blender.org/developer/F8181994/Xenomorph.blend) **Here is a recorded video evidence of the issue:** https://drive.google.com/file/d/1GVw7XJg9knSQl95_b4SskFiZzHpuc_cw/view?usp=sharing
Author

Added subscriber: @Milly

Added subscriber: @Milly

Added subscriber: @robbott

Added subscriber: @robbott

I can confirm this bug with version: 2.82 (sub 3), branch: master, commit date: 2019-11-30 17:33, hash: f1ac64921b

backtrace: P1176 , crashlog: P1177

I can confirm this bug with version: 2.82 (sub 3), branch: master, commit date: 2019-11-30 17:33, hash: `f1ac64921b` backtrace: [P1176](https://archive.blender.org/developer/P1176.txt) , crashlog: [P1177](https://archive.blender.org/developer/P1177.txt)
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

@mano-wii : can reproduce in todays buildbot (f1ac64921b), but for some reason not in Debug builds (9516921c05)

Does this ring a bell?

@mano-wii : can reproduce in todays buildbot (f1ac64921b), but for some reason not in Debug builds (9516921c05) Does this ring a bell?

This issue was referenced by 4a440ecb99

This issue was referenced by 4a440ecb99d7f365c754e533023d127a9b806115

This issue was referenced by 0f521ca4d9

This issue was referenced by 0f521ca4d9622247a740312e3e318a35c1d85aa9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Germano Cavalcante self-assigned this 2019-12-02 14:31:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72071
No description provided.