Fix T72071: Crash on snap to edge

Caused when the vertices index is dirty due to some mesh editing
operation like Extrude